--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 python:
+  - "3.5"
   - "3.6"
+  - "3.7"
 install:
-  - pip install tox poetry
+  - pip install poetry
+  - poetry install -v
 script:
-  - tox
+  - poetry run pytest tests/
